# esg-classification

./: .gitignore  README.md  pyproject.toml
notebooks/: 01-notebook.ipynb  02b-notebook.ipynb  04-notebook.ipynb  05-notebook.ipynb
src/esg/: __init__.py  eu_taxonomy.py  kaggle.py  oecd.py  oecd_default.py  oecd_mock.py
