[project]
name = "esg-classification-oecd-eu"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "nbstripout>=0.8.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandasdmx>=1.10.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
]
