[project]
name = "esg-classification"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "ipywidgets>=8.1.8",
    "jinja2>=3.1.6",
    "jupyterlab-widgets>=3.0.16",
    "kagglehub>=0.3.13",
    "matplotlib>=3.10.7",
    "nbstripout>=0.8.1",
    "numpy>=2.3.4",
    "pandas>=2.3.3",
    "pandasdmx>=1.10.0",
    "plotly>=6.4.0",
    "requests>=2.32.5",
    "scikit-learn>=1.7.2",
    "seaborn>=0.13.2",
    "shap>=0.49.1",
    "xgboost>=3.1.1",
]
